istio/example/ingress-gateway-success/with-tls/product-page-envoyfilter-tls.yaml
apiVersion: networking.istio.io/v1alpha3  
kind: EnvoyFilter  
metadata:  
  name: ingressgateway-proxy-protocol  
  namespace: istio-system  
spec:  
  workloadSelector:  
    labels:  
      istio: ingressgateway  
  configPatches:  
  - applyTo: LISTENER  
    patch:  
      operation: MERGE  
      value:  
        address:  
          socket_address:  
            address: 0.0.0.0  
            port_value: 443  
        filter_chains:  
        - filters:  
          - name: envoy.filters.listener.proxy_protocol  
            typed_config:  
              "@type": type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
