istio/example/ingress-gateway-success/with-tls/product-page-gateway-tls.yaml
apiVersion: networking.istio.io/v1beta1  
kind: Gateway  
metadata:  
  name: productpage-gateway-tls
  namespace: istio-example  
spec:  
  selector:  
    istio: ingressgateway  
  servers:  
  - port:  
      number: 443  
      name: https  
      protocol: HTTPS  
    tls:  
      mode: SIMPLE  
      credentialName: productpage-credential  
    hosts:  
    - prod.test.dom
